--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -153,8 +153,7 @@
       \\ Led development of a translation layer integrating a vendor alerting product with internal infrastructure. Designed and maintained a high-reliability REST API with complex caching, Slack integration, error handling, and robust scalability.
 
         \begin{highlights}
-          \item Transformed and scaled an intern-led project into a key component of multiple critical systems with \textbf{over 200 internal users.}
-technical issues while delivering \textbf{exceptional user support}.
+          \item Transformed and scaled an intern-led project into a key component of multiple critical systems with \textbf{over 200 internal users.} Resolved technical issues while delivering \textbf{exceptional user support}.
           \item Engineered and maintained the backend in Java using Dropwizard and Google Guava, supported by \textbf{extensive integration testing} within our Jenkins CI/CD pipeline.
           \item Earned consistently \textbf{above-average performance} bonuses for technical excellence, impactful contributions, and \textbf{exceptional user support.}
         \end{highlights}
