--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -1,232 +1,112 @@
-% Corder_Guy_Resume.tex
-
-\documentclass[10pt,letterpaper]{article}
-
-\usepackage[
-    ignoreheadfoot,
-    top=0.5in,
-    bottom=0.5in,
-    left=0.75in,
-    right=0.75in,
-    footskip=0in,
-]{geometry}
-\usepackage{titlesec}
-\usepackage{tabularx}
-\usepackage{array}
-\usepackage[dvipsnames]{xcolor}
+\documentclass[11pt]{article}
+\usepackage[top=0.5in,bottom=0.5in,left=0.75in,right=0.75in]{geometry}
 \usepackage{enumitem}
-\usepackage{fontawesome5}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage[
-    pdftitle={Corder Guy's Resume},
-    pdfauthor={Corder Guy},
-    pdfcreator={LaTeX with RenderCV},
-    colorlinks=true,
-    urlcolor=primaryColor
-]{hyperref}
-\usepackage[pscoord]{eso-pic}
-\usepackage{calc}
-\usepackage{bookmark}
-\usepackage{lastpage}
-\usepackage{changepage}
-\usepackage{paracol}
-\usepackage{ifthen}
-\usepackage{needspace}
-\usepackage{iftex}
-\usepackage{charter}
+\usepackage{hyperref}
+\usepackage{xcolor}
+\usepackage{ocg-p} % for hidden layers
+\usepackage{titlesec}
+\hypersetup{
+  colorlinks=true,
+  urlcolor=black,
+  pdfencoding=auto,
+  pdfauthor={Corder Guy},
+  pdftitle={Corder Guy's Resume}
+}
 
-\definecolor{primaryColor}{RGB}{0, 0, 0}
+\pagestyle{empty} % removes page numbering
 
-\ifPDFTeX
-  \input{glyphtounicode}
-  \pdfgentounicode=1
-  \usepackage[T1]{fontenc}
-  \usepackage[utf8]{inputenc}
-  \usepackage{lmodern}
-\fi
+\setlist[itemize]{left=0pt, itemsep=0pt, topsep=0pt, parsep=0pt, partopsep=0pt}
 
-\raggedright
-\AtBeginEnvironment{adjustwidth}{\partopsep0pt}
-\pagestyle{empty}
-\setcounter{secnumdepth}{0}
-\setlength{\parindent}{0pt}
-\setlength{\topskip}{0pt}
-\setlength{\columnsep}{0.15cm}
-\pagenumbering{gobble}
+\titlespacing*{\section}{0pt}{0.6em}{0.8em}
 
-\titleformat{\section}{
-  \needspace{4\baselineskip}
-  \bfseries
-  \large
-}{}{
-  0pt
-}{}[
-  \vspace{1pt}
-  \titlerule
-]
-
-\titlespacing{\section}{-1pt}{0.3cm}{0.2cm}
-
-\newenvironment{header}{
-    \setlength{\topsep}{0pt}
-    \par
-    \kern
-    \topsep
-    \centering
-    \linespread{1.5}
-  }{
-    \par
-    \kern
-    \topsep
-  }
-
-\newenvironment{onecolentry}{
-    \begin{adjustwidth}{0cm}{0cm}
-  }{
-    \end{adjustwidth}
-  }
-
-\newenvironment{twocolentry}[2][]{
-    \onecolentry
-    \def\secondColumn{#2}
-    \setcolumnwidth{\fill, 4.5 cm}
-    \begin{paracol}{2}
-  }{
-    \switchcolumn \raggedleft \secondColumn
-    \end{paracol}
-    \endonecolentry
-  }
-
-% \renewcommand{\labelitemi}{\faIcon{terminal}}
-\renewcommand{\labelitemi}{$\blacktriangleright$}
-\renewcommand{\labelitemii}{$\vartriangleright$}
-\newenvironment{highlights}{
-  \setlist[itemize,1]{leftmargin=20pt}
-  \setlist[itemize,2]{leftmargin=30pt}
-  \begin{itemize}[
-      topsep=0em,
-      parsep=0.25em,
-      partopsep=0em,
-      itemsep=0pt
-    ]
-  }{
-    \end{itemize}
-  }
+\renewcommand{\labelitemi}{\raisebox{0.125em}{\small$\bullet$}}
+%\renewcommand{\labelitemii}{\raisebox{0.2em}{\tiny$\circ$}}
 
 \begin{document}
-  \newcommand{\AND}{\unskip
-    \cleaders\copy\ANDbox\hskip\wd\ANDbox
-    \ignorespaces
-  }
-  \newsavebox\ANDbox
-  \sbox\ANDbox{$|$}
 
-  \begin{header}
-    \fontsize{25pt}{25pt}\selectfont Corder Guy
+% Header
+\begin{center}
+  {\Huge\textbf{Corder Guy}} \\
+  \vspace{1em}
+  {\Large\textbf{Software Engineer -- Backend \& Infrastructure}} \\
+  \href{mailto:corder.guy@gmail.com}{\texttt{corder.guy@gmail.com}}
+  \textbar{}
+  \href{tel:+15129948895}{\texttt{(512) 994-8895}}
+  \textbar{}
+  Houston, TX, USA
+\end{center}
 
-    \normalsize
-    \mbox{Houston, TX, USA}
-    \kern 5pt \AND \kern 5pt
-    \mbox{\href{mailto:corder.guy@gmail.com}{corder.guy@gmail.com}}
-    \kern 5pt \AND \kern 5pt
-    \mbox{\href{tel:+1-512-994-8895}{512 994 8895}}
-    \kern 5pt \AND \kern 5pt
-    \mbox{\href{https://corder.tech/}{corder.tech}}
-  \end{header}
+\newcommand{\sectionline}{\vspace{-0.75em}\hrule\vspace{0.75em}}
+\newcommand{\mainsection}[1]{\section*{#1} \sectionline}
 
-  \vspace{5pt}
+% Summary
+\mainsection{Summary}
+Experienced software engineer with 5+ years building backend and full-stack systems at scale. Led infrastructure and platform projects supporting hundreds of users at Two Sigma. Expertise in REST APIs, CI/CD pipelines, and system reliability. Strong track record of delivering production software, mentoring developers, and driving cross-team initiatives in fast-paced environments.
+%Results-driven full-stack software engineer with 5+ years of expertise developing and scaling reliable, maintainable systems within fast-paced environments. Proven ability to rapidly master new technologies and solve complex, unfamiliar problems. Recognized for strong mentorship and leadership, committed to fostering collaborative team environments and delivering high-quality software solutions.
+% I'm a software engineer with 5+ years of experience building reliable systems in fast-moving environments.
+% I ramp up quickly in new domains and enjoy turning unfamiliar problems into clean, maintainable solutions.
+% I'm also a strong mentor and collaborator committed to helping teams ship great software.
 
-  % \section{Core Competencies}
-  % \begin{onecolentry}
-  %   \begin{tabular}{l l l}
-  %     Software Development & Back-End Engineering & REST API Development \\
-  %     High-Availability Systems & Infrastructure Automation & CI/CD Pipelines \\
-  %     Incident Management & Agile Methodologies & Technical Mentoring \\
-  %     Cross-Team Collaboration & Full-Stack Development & \\
-  %   \end{tabular}
-  % \end{onecolentry}
+\newcommand{\skillsection}[2]{\textbf{#1:} \\ \hspace*{1em} #2}
 
-  \section{Relevant Work Experience}
-  \setcolumnwidth{\fill, 5 cm}
-  \begin{paracol}{2}
-    \textbf{Software Engineer}, Two Sigma -- Houston, TX
-    \switchcolumn
-    \begin{flushright}
-      August 2019 -- November 2024
-    \end{flushright}
-  \end{paracol}
+% Technical Skills
+\mainsection{Technical Skills}
+\skillsection{Languages \& Frameworks}{Java, Python, TypeScript, HTML/CSS, Angular, React, Dropwizard, Flask, Web Components} \\
+\skillsection{Tools \& Ecosystems}{Git, GitHub/GitLab, Jira, Jenkins, ELK Stack, Linux, Windows, REST APIs, CI/CD Pipelines} \\
+\skillsection{Collaboration \& Practices}{Unit \& Integration Testing, Agile Methodologies, Technical Mentorship, Cross-team Collaboration}
 
-  \vspace{-0.25cm}
+\newcommand{\sectionentry}[2]{\textbf{#1} \hfill \emph{#2}}
+\newcommand{\roleentry}[1]{\item \textbf{#1}}
+\newenvironment{role}[1]{
+  \roleentry{#1}
+  \begin{itemize}
+}{
+  \end{itemize}
+}
 
-  \begin{onecolentry}
-    \begin{highlights}
-      \item \textbf{\emph{Technical Lead -- OnCall Service}}
-      \\ Led development of a translation layer integrating a vendor alerting product with internal infrastructure. Designed and maintained a high-reliability REST API with complex caching, Slack integration, error handling, and robust scalability.
+% Work Experience
+\mainsection{Work Experience}
+\sectionentry{Software Engineer \textbar{} Two Sigma \textbar{} Houston, TX}{August 2019 -- November 2024}
+\begin{itemize}
+  \begin{role}{Technical Lead – Infrastructure Engineering}
+    \item Led design and implementation of a translation service connecting a vendor alerting platform to internal infrastructure.
+    \item Delivered the majority of the code, wrote internal documentation, and onboarded teams.
+    \item Maintained a high-reliability REST API with caching, Slack integration, and robust error handling.
+    \item Scaled an intern prototype into a platform used by 200+ internal users.
+    \item Built Java backend services with Dropwizard and CI/CD pipelines in Jenkins.
+  \end{role}
 
-        \begin{highlights}
-          \item Transformed and scaled an intern-led project into a key component of multiple critical systems with \textbf{over 200 internal users.} Resolved technical issues while delivering \textbf{exceptional user support}.
-          \item Engineered and maintained the backend in Java using Dropwizard and Google Guava, supported by \textbf{extensive integration testing} within our Jenkins CI/CD pipeline.
-          \item Earned consistently \textbf{above-average performance} bonuses for technical excellence, impactful contributions, and \textbf{exceptional user support.}
-        \end{highlights}
+  \begin{role}{Software Developer – Model Release Controls}
+    \item Volunteered for a cross-team compliance initiative following a firmwide model deployment incident.
+    \item Independently gathered requirements from the Modeling Data Engineering team and designed an approval-tracking system integrated with Jira.
+    \item Built a microservice that assigned release IDs, monitored Jira workflows, and surfaced progress to modelers and pipeline automation.
+  \end{role}
 
-      \item \textbf{\emph{Selected Contributor -- Top-Priority Cross-Team Initiative}}
-        \\ Hand-picked for a high-visibility task force, restructuring release path controls to ensure accountability and compliance.
+  \begin{role}{Mentorship, Hiring, and Culture}
+    \item Mentored three interns (two shipped to prod); selected projects and provided technical guidance.
+    \item Defined goals and requirements for one intern beyond standard mentorship.
+    \item Conducted 50+ full-time interviews and trained new interviewers in structured evaluation techniques.
+    \item Ran office-wide Hacker Lab workshops on soldering, amateur radio, and 3D printing to foster hands-on creativity and team engagement.
+  \end{role}
 
-        \begin{highlights}
-          \item \textbf{Led integration with legacy workflows,} collaborating across \textbf{four teams} to gather requirements and implement seamless automation.
-          \item Designed, implemented, and deployed a \textbf{Jira-integrated microservice,} enforcing approval workflows for \textbf{production-critical} releases.
-        \end{highlights}
+  \begin{role}{UI Modernization}
+    \item Volunteered to pilot adoption of Web Components as a cross-team UI strategy at the firm.
+    \item Collaborated with engineers from other teams to unify two parallel UIs into a single shared component.
+    \item Co-designed and deployed a streamlined UI that reduced total lines of code by 70\% and improved maintainability.
+  \end{role}
+\end{itemize}
 
-      \item \textbf{\emph{Intern Manager and Mentor}}
+% Education
+\mainsection{Education}
+\sectionentry{Texas A\&M University \textbar{} College Station, TX}{Graduated May 2019} \\
+Bachelor of Science in Computer Science \\
+Minors: Cybersecurity, Mathematics
 
-      \begin{highlights}
-        \item Selected \textbf{three times} to \textbf{mentor engineering interns,} providing \textbf{technical guidance and professional development.}
-        \item Provided \textbf{code reviews} and technical resources, ensuring interns contributed \textbf{production-level} code to three products.
-      \end{highlights}
-
-      \item \textbf{\emph{Technical Interviewer}}
-        \\ Conducted \textbf{50+ technical interviews} for internship and full-time candidates, assessing skills in \textbf{algorithms, data structures, and backend development.}
-
-        \begin{highlights}
-          \item Delivered \textbf{prompt and detailed candidate feedback,} helping improve hiring decisions and refine interview processes.
-          \item Provided training and advice to new interviewers, ensuring consistency in evaluations.
-        \end{highlights}
-
-      \item \textbf{\emph{Individual Contributor -- Web Components}}
-        \\ Volunteered for a \textbf{crossteam pilot} of Web Components technology and \textbf{re-engineered} two independently- \\developed UI screens into a unified component, reducing code duplication by \textbf{70\%} and \textbf{streamlining development workflows}.
-
-      \item \textbf{\emph{Hacker Lab Instructor}}
-        \\ Designed and taught \textbf{hands-on workshops} on amateur radio, soldering, and 3D printing for \textbf{20+ participants.}
-    \end{highlights}
-  \end{onecolentry}
-
-  \section{Technical Experience and Expertise}
-  \begin{onecolentry}
-    \begin{tabular}{l l}
-      \textbf{Languages} & Java, Python, TypeScript, HTML, CSS \\
-      \textbf{Frameworks} & Angular, Dropwizard, Flask, Web Components \\
-      \textbf{Tools} & Git, Jira, GitHub, GitLab \\
-      \textbf{Technologies} & Unit Testing, CI/CD, REST APIs, Linux, Windows \\
-    \end{tabular}
-  \end{onecolentry}
-
-  \section{Education}
-  \setcolumnwidth{\fill, 5 cm}
-  \begin{paracol}{2}
-    \textbf{Texas A\&M University}
-    \switchcolumn
-    \begin{flushright}
-      September 2014 -- May 2019
-    \end{flushright}
-  \end{paracol}
-
-  \vspace{-0.3cm}
-
-  \begin{onecolentry}
-    \hspace{10pt} \textbf{\emph{Computer Science}}, Bachelor of Science \\
-    \hspace{10pt} \textbf{\emph{Cybersecurity}}, Minor \\
-    \hspace{10pt} \textbf{\emph{Mathematics}}, Minor \\
-  \end{onecolentry}
+% Optional: ATS keyword enrichment (hidden layer)
+\vspace{-20em}
+\begin{ocg}{ATS Keywords}{atskeywords}{0}\textcolor{white}{{\fontsize{5}{1} \selectfont
+%Software Engineering, Infrastructure Engineering, DevOps, Agile Development, Cross-functional Collaboration, Java, Python, TypeScript, Angular, React, Dropwizard, Flask, Web Components, REST APIs, CI/CD, Jenkins, GitHub, GitLab, Jira, Unit Testing, Mentorship, Interviewing, Monorepo, OpenAPI, Microservices, Documentation, Technical Leadership, Production Systems, Scalable Architecture, Approval Workflows, Intern Projects, Code Reviews, Front End, Back End, Full-Stack, Fullstack
+}}
+\end{ocg}
 
 \end{document}
