Cleanup Skills section

--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -51,7 +51,7 @@ Backend-focused engineer with 5+ years at Two Sigma building internal platforms,
 % Technical Skills
 \resumesection{Technical Skills}
 \skillsection{Languages \& Frameworks}{}
-Java, Python, JavaScript/TypeScript, HTML/CSS, React, Flask, Dropwizard, Guava \\
+Java, Python, JavaScript/TypeScript, HTML/CSS, Angular, React, SQL, Flask, Dropwizard \\
 \skillsection{Systems \& Tooling}{}
 Git, GitHub/GitLab, Linux, Jenkins, CI/CD, integration testing, RESTful API design, API implementation \\
 \skillsection {Infrastructure \& Engineering}{}
